@@ -1,5 +1,12 @@
 2010-03-17  Sam Steingold  <sds@gnu.org>
 
+	* makemake.in, modules/regexp/Makefile.in,
+	* modules/syscalls/Makefile.in, modules/wildcard/Makefile.in (gllib):
+	do not pass build_aux= to make in subdir (revert the 2010-03-17
+	patch because it does not look like gnulib will ever use $(build_aux))
+
+2010-03-17  Sam Steingold  <sds@gnu.org>
+
 	* makemake.in (MODULE_AM): avoid not portable "fgrep -q"
 	Reported by Christian Walther <cptsalek@gmail.com>
 
